# ontourage

./: .gitattributes  MANIFEST.in  README.md  setup.cfg
environment/: dev_ontourage.yml  run_ontourage.yml
ontourage/: __init__.py  __main__.py  _version.py  constants.py  extract_seq.py  process_align.py  process_gaf.py  process_gfa.py  process_graph.py  structs.py
