
[metadata]
name = ontourage
version = attr: ontourage.__version__
description = A simple command-line tool to explore and manipulate (assembly) graphs and corresponding alignments of ONT reads
license = MIT
license_files = LICENSE
author = Peter Ebert
author_email= peter.ebert@iscb.org
url = https://github.com/ptrebert/ontourage

[options]
packages = find:
python_requires = >=3.7
install_requires =
    dnaio>=0.6.0
    pandas>=1.3.5
    numpy>=1.21.4
    scipy>=1.7.3
    xopen>=1.2.1
    networkx>=2.6.3
    tables>=3.6.1

[options.entry_points]
console_scripts =
    ontourage = ontourage.__main__:run_ontourage

[versioneer]
VCS = git
style = pep440
versionfile_source = ontourage/_version.py
versionfile_build = ontourage/_version.py
tag_prefix = v
parentdir_prefix = ontourage-
